--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
 
 body { margin:0; padding:0; }
-#map { position:absolute; top:0; bottom:0; width:100%; }
+
+#map
+{
+  position:absolute;
+  top: 50px;
+  bottom: 0;
+  width: 100%
+}
+
+.navbar-nav > li {
+  text-transform: uppercase;
+}
