animation fixed in loading

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,14 +7,13 @@ body { margin:0; padding:0; }
   left: 50%;
   margin-left: -24px;
   margin-top: -24px;
-  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-  animation: sk-rotateplane 1.2s infinite ease-in-out;
+  -webkit-animation: sk-rotateplane 0.9s infinite ease-in-out;
+  animation: sk-rotateplane 0.9s infinite ease-in-out;
 }
 
 @-webkit-keyframes sk-rotateplane {
   0% { -webkit-transform: perspective(120px) }
-  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+  100% { -webkit-transform: perspective(120px) rotateY(180deg) }
 }
 
 @keyframes sk-rotateplane {
@@ -22,12 +21,9 @@ body { margin:0; padding:0; }
     transform: perspective(120px) rotateX(0deg) rotateY(0deg);
     -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
   }
-  50% {
-    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
-  } 100% {
-    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  100% {
+    transform: perspective(120px) rotateY(-180.1deg) rotateX(0deg);
+    -webkit-transform: perspective(120px) rotateY(-180.1deg) rotateX(0deg)
   }
 }
 
