--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,18 @@ body { margin:0; padding:0; }
 .spinner {
   width: 40px;
   height: 40px;
-  background-color: #F2D00C;
+
 
   margin: 100px auto;
   -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
   animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+.spinner.yellow{
+  background-color: #F2D00C;
+}
+.spinner.blue{
+  background-color: #349FF7;
 }
 
 @-webkit-keyframes sk-rotateplane {
