--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,3 +107,13 @@ author{
 .logo{
   margin-top: -13px;
 }
+
+.marker-thumb img{
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.marker-thumb h1{
+  font-size: 22px !important;
+  font-weight: bold;
+}
