data read from full md

--- a/src/components/details.html
+++ b/src/components/details.html
@@ -1,7 +1,6 @@
 <template>
 
-  <div class="container page-content">
-    <h1 t="details.title"></h1>
+  <div class="container page-content" innerHTML.bind="data">
   </div>
 
 </template>
