data and styles for data page

--- a/src/components/details.html
+++ b/src/components/details.html
@@ -6,7 +6,7 @@
         <h5 t="details.closeToThisPlace"></h5>
     </div>
 
-    <div class="col-md-6" innerHTML.bind="data"></div>
+    <div class="col-md-6 data" id="data" innerHTML.bind="data"></div>
 
     <div class="col-md-3">
         <h5 t="details.alsoInteresting"></h5>
