details page style improved

--- a/src/components/details.html
+++ b/src/components/details.html
@@ -5,25 +5,28 @@
 
     <div>
       <div class="col-md-3">
+        <div class="section">
           <h5 t="details.closeToThisPlace"></h5>
           <close-info repeat.for="i of closeInfos"></close-info>
+        </div>
       </div>
 
-      <div class="col-md-5 data" id="data" innerHTML.bind="data"></div>
-
-      <div class="col-md-4">
-          <h5 t="details.alsoInteresting"></h5>
+      <div class="col-md-6 data" id="data">
+        <div class="section" innerHTML.bind="data"></div>
       </div>
+
+      <div class="col-md-3">
+          <div class="section">
+            <h5 t="details.alsoInteresting"></h5>
+          </div>
+      </div>
+
+      <div class="col-md-6 col-md-offset-3">
+        <div class="section">
+            <div id="mc-container"></div>
+        </div>
+      </div>
+
     </div>
-
-<div class="col-md-5 col-md-offset-3">
-  <div id="mc-container"></div>
-</div>
-
-
-
-
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
 </div>
 </template>
