--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,10 @@
 
-body { margin:0; padding:0; }
+body {
+  margin:0;
+  padding:0;
+  background-color: #F5F5F5 !important;
+  font-size: 15px !important;
+}
 
 .spinner {
   width: 40px;
@@ -133,4 +138,19 @@ author{
     transition: all .2s ease-in-out;
     display: inline-block;
     max-width: 100%;
+}
+
+.section{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: white;
+  width: 100%;
+  padding: 15px;
+  border: none;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+}
+
+.section h2{
+  margin-top: 0;
 }
