home view added

--- a/src/components/details.html
+++ b/src/components/details.html
@@ -1,10 +1,10 @@
 <template>
   <require from="./detailsClose"></require>
 
-  <div class="page-content">
+  <div class="page-content container">
 
     <div>
-      <div class="col-md-3">
+      <div class="col-sm-4">
         <div class="section">
           <h5 t="details.closeToThisPlace"></h5>
           <hr/>
@@ -12,7 +12,7 @@
         </div>
       </div>
 
-      <div class="col-md-6 data" id="data">
+      <div class="col-sm-8 data" id="data">
         <div class="section" innerHTML.bind="data"></div>
 
         <div class="section">
@@ -21,12 +21,12 @@
 
       </div>
 
-      <div class="col-md-3">
+      <!-- <div class="col-md-3">
           <div class="section">
             <h5 t="details.alsoInteresting"></h5>
             <hr/>
           </div>
-      </div>
+      </div> -->
     </div>
 </div>
 </template>
