grid layout set up

--- a/src/components/home.html
+++ b/src/components/home.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="wall-container" id="wall-container">
-      <div class="section" repeat.for="i of infos">
+      <div class="section section-fixed" repeat.for="i of infos">
           <close-info class="info-tile" data.bind="i"></close-info>
         </div>
     </div>
