--- a/styles/styles.css
+++ b/styles/styles.css
@@ -155,9 +155,8 @@ author{
   margin-top: 0;
 }
 
-.section-gap{
-  margin-left: 15px;
-  margin-right: 15px;
+.section-fixed{
+  width: calc(25% - 11px);
 }
 
 .info-tile:last-child hr{
