--- a/styles/styles.css
+++ b/styles/styles.css
@@ -140,6 +140,10 @@ author{
     max-width: 100%;
 }
 
+section{
+  margin-top: 50px;
+}
+
 .section{
   margin-top: 10px;
   margin-bottom: 10px;
@@ -156,7 +160,7 @@ author{
 }
 
 .section-fixed{
-  width: calc(25% - 11px);
+  width: 300px;
 }
 
 .info-tile:last-child hr{
@@ -165,4 +169,15 @@ author{
 
 .index-top{
   min-height: 400px;
+}
+
+.wall-container{
+  margin-left: -5px;
+  margin-right: -5px;
+}
+.wall-item{
+  width: 25%;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
