--- a/src/components/home.html
+++ b/src/components/home.html
@@ -1,5 +1,6 @@
 <template>
-  <require from="../elements/closeInfo"></require>
+
+  <require from="../elements/wall"></require>
 
   <div class="page-content container">
 
@@ -10,18 +11,12 @@
     <section>
       <h4 t="home.interestingThisWeek"></h4>
 
-      <div class="wall-container" id="wall-container">
-        <div class="wall-item" repeat.for="i of infos">
-            <div class="section">
-              <close-info class="info-tile" data.bind="i"></close-info>
-            </div>
-        </div>
-
-      </div>
+      <wall infos.bind="infos"></wall>
     </section>
 
     <section>
       <h4 t="home.nearMe"></h4>
+        <!-- <wall infos.bind="infos"></wall> -->
     </section>
   </div>
 </template>
