--- a/src/components/home.html
+++ b/src/components/home.html
@@ -16,7 +16,7 @@
 
     <section>
       <h4 t="home.nearMe"></h4>
-        <!-- <wall infos.bind="infos"></wall> -->
+        <wall infos.bind="infos"></wall>
     </section>
   </div>
 </template>
