--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@ body {
   padding:0;
   background-color: #F5F5F5 !important;
   font-size: 15px !important;
+  color: #333 !important;
 }
 
 .spinner {
