--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,10 +173,14 @@ section{
 .wall-container{
   margin-left: -5px;
   margin-right: -5px;
+  position: relative;
 }
 .wall-item{
   width: 25%;
-  padding-bottom: 5px;
+  padding-bottom: 0px;
   padding-left: 5px;
   padding-right: 5px;
+  position: absolute;
+  left: 0;
+  right: 0;
 }
