styles and index page

--- a/src/components/home.html
+++ b/src/components/home.html
@@ -4,8 +4,16 @@
 
   <div class="page-content container">
 
-    <div class="section index-top">
+    <div class="section index-top bg-books">
+      <div class="text-center">
+        <div class="logo-container"><img class="logo-index" src="content/logo3.png"/></div>
 
+      </div>
+
+      <div class="text-center">
+        <h1>Литературная карта</h1>
+        <h2>города Тюмень</h2>
+      </div>
     </div>
 
     <section>
