--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,8 +3,8 @@ body {
   margin:0;
   padding:0;
   background-color: #F5F5F5 !important;
-  font-size: 15px !important;
-  color: #333 !important;
+  font-size: 20px !important;
+  color: #5f5858 !important;
 }
 
 blockquote {
