--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,9 +146,7 @@ section{
   padding-bottom: 0px;
   padding-left: 5px;
   padding-right: 5px;
-  position: absolute;
-  left: 0;
-  right: 0;
+  float: left;
 }
 
 @media(max-width: 768px){
