--- a/src/components/detailsClose.html
+++ b/src/components/detailsClose.html
@@ -1,5 +1,5 @@
 <template>
   <require from="../elements/closeInfo"></require>
 
-  <close-info class="info-tile" repeat.for="i of closeInfos" data.bind="i" details.bind="currentDetails"></close-info>
+  <close-info class="info-tile" repeat.for="i of closeInfos" data.bind="i"></close-info>
 </template>
