some styles improved

--- a/src/components/home.html
+++ b/src/components/home.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div class="page-content container">
+  <div class="container">
 
     <section>
       <h4><i class="fa fa-star"></i>&nbsp;<span t="home.interestingThisWeek"></span></h4>
@@ -24,6 +24,6 @@
       <h4><i class="fa fa-map-marker"></i>&nbsp;<span t="home.nearMe"></span></h4>
       <wall infos.bind="closestInfos"></wall>
     </section>
-    
+
   </div>
 </template>
