--- a/src/components/admin.html
+++ b/src/components/admin.html
@@ -1,10 +1,13 @@
 <template>
+  <require from="../elements/adminMarkerInfo"></require>
 
   <div class="page-content container">
-
-    
     <section>
         <h4 t="admin.mapPoints"></h4>
+
+        <admin-marker-info></admin-marker-info>
+
+
     </section>
 
 
