--- a/src/components/admin.html
+++ b/src/components/admin.html
@@ -7,6 +7,7 @@
 
         <div class="row text-center">
             <admin-marker-info repeat.for="m of markers" item.bind="m"></admin-marker-info>
+            <div class="section section-fixed section-fixed-height float" style="margin-left: 3px; margin-right: 3px;"></div>
         </div>
 
     </section>
