--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
 
 body {
   margin:0;
@@ -5,6 +9,8 @@ body {
   background-color: #F5F5F5 !important;
   font-size: 15px !important;
   color: #5f5858 !important;
+  height: 100%;
+  margin-bottom: 65px;
 }
 
 blockquote {
@@ -200,6 +206,10 @@ section{
     color: white;
     line-height: 60px;
     border-bottom: 4px solid #F2D00C;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    z-index: -1;
 }
 
 .float{
