comments init for general page

--- a/src/components/feedback.html
+++ b/src/components/feedback.html
@@ -1,7 +1,7 @@
 <template>
     <div  class="page-content container">
     <section>
-      <h4 t="feedback.title"></h4>
+      <h4><i class="fa fa-smile-o"></i>&nbsp;<span t="feedback.title"></span></h4>
     </section>
 
     <section>
