--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,6 +120,9 @@ section{
   border: none;
   -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.15);
   box-shadow: 0 1px 3px rgba(0,0,0,.15);
+  -webkit-column-break-inside: avoid;
+          page-break-inside: avoid;
+               break-inside: avoid;
 }
 
 .section h2{
@@ -219,4 +222,12 @@ section{
 .section.yellow{
   background-color: #F2D00C !important;
   position: relative;
+}
+
+.mini-map{
+  width: calc(100% + 30px);
+  height: 150px;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-top: -15px;
 }
