style of admin page

--- a/src/components/admin.html
+++ b/src/components/admin.html
@@ -10,7 +10,7 @@
 
         <div class="row text-center">
           <div class="col-lg-12">
-              <div class="section section-fixed float text-center" style="margin-left: 8px; margin-right: 8px; min-height: 300px;">
+              <div class="section section-fixed text-center" style="margin-left: 8px; margin-right: 8px; min-height: 300px;">
                 <div style="margin-top: 86px;">
                   <div t="admin.addMarker"></div>
                   <a href="JavaScript:void(0);" click.delegate="addMarker()" class="btn btn-default">
