saving the index php

--- a/src/components/admin.html
+++ b/src/components/admin.html
@@ -18,7 +18,7 @@
                     <i class="fa fa-plus"></i>&nbsp;<span t="admin.item.add"></span>
                   </a>
 
-                  <button class="btn btn-success" >
+                  <button class="btn btn-success" click.delegate="saveIndex()">
                       <i class="fa fa-save"></i>&nbsp;<span t="admin.edit.save"></span>
                   </button>
 
