--- a/src/components/home.html
+++ b/src/components/home.html
@@ -9,7 +9,7 @@
 
     <div class="text-center">
       <h1>Литературная карта</h1>
-      <h2>города Тюмень</h2>
+      <h2>города Тюмени</h2>
     </div>
   </div>
 
