--- a/src/components/map.html
+++ b/src/components/map.html
@@ -2,4 +2,11 @@
 
 <div id='map'></div>
 
+<div ref="mapLegend" style='display:none;'>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3"><i class="fa fa-fw fa-search"></i></span>
+    <input type="text" class="form-control" id="basic-search" aria-describedby="basic-addon3" placeholder.bind="'map.searchMessage' | t">
+  </div>
+</div>
+
 </template>
