--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,3 +260,18 @@ section{
 .danger{
   color: #e51c23 !important;
 }
+
+.mapLegend{
+  position: absolute;
+  padding: 6px 12px;
+  top: 143px;
+  left: 12px;
+  z-index: 9000;
+  width: 400px;
+  background: white;
+  border-radius: 3px;
+  /*border: 1px solid #999;*/
+  /*border-color: rgba(0,0,0,.4);*/
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.15);
+  box-shadow: 0 1px 3px rgba(0,0,0,.15);
+}
