--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,50 +13,17 @@ body {
   margin-bottom: 65px;
 }
 
-blockquote {
-  border-left: none !important;
-  position: relative;
-  marign: 0;
-  padding: 30px 120px;
-  text-align: center;
-  font-size: 30px; }
-  blockquote:before, blockquote:after {
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    font-size: 120px;
-    line-height: 1; }
-  blockquote:before {
-    top: 0;
-    left: 0;
-    content: "\201C"; }
-  blockquote:after {
-    bottom: 0;
-    right: 0;
-    content: "\201D"; }
-
 /* =Media Queries
 -------------------------------------------------------------- */
 @media only screen and (max-width: 1100px) {
-  blockquote {
-    font-size: 24px; } }
+ }
 @media only screen and (max-width: 960px) {
   p {
     font-size: 14px; }
 
-  blockquote {
-    padding: 30px 60px;
-    font-size: 18px; }
-    blockquote:before, blockquote:after {
-      width: 30px;
-      height: 30px;
-      font-size: 60px; } }
+ }
 @media only screen and (max-width: 690px) {
-  blockquote {
-    padding: 10px 30px;
-    font-size: 16px; }
-    blockquote:before, blockquote:after {
-      font-size: 30px; } }
+   }
 
 author{
   font-style: italic;
