search of the main page

--- a/src/components/home.html
+++ b/src/components/home.html
@@ -16,7 +16,7 @@
   <div class="container">
 
     <section>
-      <h4><i class="fa fa-search"></i>&nbsp;<span t="home.search"></span></h4>
+      <h4><i class="fa fa-meh-o"></i>&nbsp;<span t="home.search"></span></h4>
       <form>
         <div class="section">
           <div class="input-group">
