--- a/src/components/home.html
+++ b/src/components/home.html
@@ -20,7 +20,7 @@
       <form>
         <div class="section">
           <div class="input-group">
-            <input value.two-way="query&debounce:500" type="text" class="form-control" placeholder.bind="'map.searchMessage' | t">
+            <input value.two-way="query&debounce:500" type="text" class="form-control" placeholder.bind="'home.searchMessage' | t">
             <span class="input-group-addon" id="basic-addon3"><i class="fa fa-fw fa-search" style="font-size: 20px; color: #aaa"></i></span>
           </div>
         </div>
